force-app/main/default/objects/Attendance__c/fields/Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date__c</fullName>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>