force-app/main/default/objects/Attendance__c/fields/ATT_TIME__c.field-meta.xml
<CustomField>
    <fullName>ATT_TIME__c</fullName>
    <formula>TEXT(
  IF(
    MOD(FLOOR((CreatedDate + 0.2291667 - DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 0.2291667)) &amp; &quot; 00:00:00&quot;)) * 24), 12) = 0,
    12,
    MOD(FLOOR((CreatedDate + 0.2291667 - DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 0.2291667)) &amp; &quot; 00:00:00&quot;)) * 24), 12)
  )
) &amp; &quot;:&quot; &amp; 
LPAD(
  TEXT(
    FLOOR(MOD((CreatedDate + 0.2291667 - DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 0.2291667)) &amp; &quot; 00:00:00&quot;)) * 1440, 60))
  ),
  2,
  &quot;0&quot;
) &amp; &quot; &quot; &amp;
IF(
  FLOOR(MOD((CreatedDate + 0.2291667 - DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate + 0.2291667)) &amp; &quot; 00:00:00&quot;)) * 24, 24)) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATT TIME</label>
    <type>Text</type>
</CustomField>