force-app/main/default/objects/Attendance__c/fields/Attendance_Applied_on__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Applied_on__c</fullName>
    <formula>IF(NOT(ISBLANK(Status_Updated_Time__c)),
   Status_Updated_Time__c,
   CreatedDate
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Applied on</label>
    <type>DateTime</type>
</CustomField>