force-app/main/default/objects/Attendance__c/fields/Attendance_Sent__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Sent</label>
    <type>Checkbox</type>
</CustomField>