force-app/main/default/objects/Attendance__c/fields/Automatic_Attendance_Record__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Attendance_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Attendance Record</label>
    <type>Checkbox</type>
</CustomField>