force-app/main/default/objects/Attendance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>IF(
    AND(NOT(ISBLANK(Leave_Date__c)), NOT(ISBLANK(Date_of_attendance__c))), 
    /* Both are not null, check if they are the same */
    IF(
        Leave_Date__c = Date_of_attendance__c, 
        Leave_Date__c, /* Both are the same, take the value */
        NULL /* Return null if both are different */
    ),
    /* If one of them is null, take the non-null value */
    IF(
        NOT(ISBLANK(Leave_Date__c)), 
        Leave_Date__c, 
        Date_of_attendance__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>