force-app/main/default/objects/Attendance__c/fields/Date_of_attendance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_attendance__c</fullName>
    <label>Date Of Attendance</label>
    <type>Date</type>
</CustomField>