force-app/main/default/objects/Attendance__c/fields/EMP_CODE__c.field-meta.xml
<CustomField>
    <fullName>EMP_CODE__c</fullName>
    <formula>if(
     OwnerId != NULL ,
     Owner:User.EmployeeNumber,
     &apos;&apos;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMP CODE</label>
    <type>Text</type>
</CustomField>