force-app/main/default/objects/Attendance__c/fields/EOD_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EOD_Date_Time__c</fullName>
    <label>EOD Date Time</label>
    <type>DateTime</type>
</CustomField>