force-app/main/default/objects/Attendance__c/fields/EOD_Location__c.field-meta.xml
<CustomField>
    <fullName>EOD_Location__c</fullName>
    <description>To capture the EOD marked location</description>
    <label>EOD Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>