force-app/main/default/objects/Attendance__c/fields/EOD_Sent__c.field-meta.xml
<CustomField>
    <fullName>EOD_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EOD Sent</label>
    <type>Checkbox</type>
</CustomField>