force-app/main/default/objects/Attendance__c/fields/First_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Time__c</fullName>
    <label>First Activity Time</label>
    <type>Time</type>
</CustomField>