force-app/main/default/objects/Attendance__c/fields/HUB__c.field-meta.xml
<CustomField>
    <fullName>HUB__c</fullName>
    <formula>if(
     OwnerId != NULL ,
     Owner:User.Division ,
     &apos;&apos;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HUB</label>
    <type>Text</type>
</CustomField>