force-app/main/default/objects/Attendance__c/fields/Is_Sunday__c.field-meta.xml
<CustomField>
    <fullName>Is_Sunday__c</fullName>
    <formula>WEEKDAY( Date__c ) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sunday</label>
    <type>Checkbox</type>
</CustomField>