force-app/main/default/objects/Attendance__c/fields/Leave_Application__c.field-meta.xml
<CustomField>
    <fullName>Leave_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Record</label>
    <referenceTo>Leave_Application__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>