force-app/main/default/objects/Attendance__c/fields/Leave_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Leave_Application_Number__c</fullName>
    <label>Leave Application Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>