force-app/main/default/objects/Attendance__c/fields/Leave_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Date__c</fullName>
    <label>Date Of Leave</label>
    <type>Date</type>
</CustomField>