force-app/main/default/objects/Attendance__c/fields/Leave_For__c.field-meta.xml
<CustomField>
    <fullName>Leave_For__c</fullName>
    <label>Leave For</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Leave_Period__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>First half</fullName>
            </value>
            <value>
                <fullName>Second half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>