force-app/main/default/objects/Attendance__c/fields/Leave_Period__c.field-meta.xml
<CustomField>
    <fullName>Leave_Period__c</fullName>
    <label>Leave Period</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>