force-app/main/default/objects/Attendance__c/fields/ROLE__c.field-meta.xml
<CustomField>
    <fullName>ROLE__c</fullName>
    <formula>if(
     OwnerId != NULL ,
     Owner:User.Employee_Role__c,
     &apos;&apos;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROLE</label>
    <type>Text</type>
</CustomField>