force-app/main/default/objects/Attendance__c/fields/Status_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_Time__c</fullName>
    <label>Status Updated Time</label>
    <type>DateTime</type>
</CustomField>