force-app/main/default/objects/Attendance__c/fields/Total_Distance_Calculated_by_Google_API__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Calculated_by_Google_API__c</fullName>
    <description>To get the total distance travelled by the user on a particular day using the Google API</description>
    <inlineHelpText>Total distance travelled by the user on a particular day using the Google API</inlineHelpText>
    <label>Total Distance (Google API)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>