force-app/main/default/objects/Attendance__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Beat</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Official Meeting</fullName>
            </value>
            <value>
                <fullName>Outstation Visit</fullName>
            </value>
            <value>
                <fullName>Office Visit</fullName>
            </value>
            <value>
                <fullName>Distributor Visit</fullName>
            </value>
            <value>
                <fullName>Marketing Visit</fullName>
            </value>
            <value>
                <fullName>Working As PJP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>