force-app/main/default/objects/Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Work__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Attendance</label>
</ListView>