force-app/main/default/objects/Attendance__c/listViews/All_Attendance.listView-meta.xml
<ListView>
    <fullName>All_Attendance</fullName>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Attendance</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>